[package]
name = "mps"
version = "0.2.0"
edition = "2021"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
description = "Music Playlist Scripting language (MPS)"
license = "LGPL-2.1-only OR GPL-2.0-or-later"
readme = "README.md"

[workspace]
members = [
    "mps-interpreter",
    "mps-player"
]

[dependencies]
# local
mps-interpreter = { version = "0.2.0", path = "./mps-interpreter" }
# external
clap = { version = "3.0", features = ["derive"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mps-player = { version = "0.2.0", path = "./mps-player", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
# TODO fix need to specify OS-specific dependency of mps-player
mps-player = { version = "0.2.0", path = "./mps-player", features = ["mpris-player"] }
