[package]
name = "mps"
version = "0.8.0"
edition = "2021"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
description = "Music Playlist Script language (MPS)"
license = "LGPL-2.1-only OR GPL-3.0-only"
repository = "https://github.com/NGnius/mps"
keywords = ["audio", "playlist", "scripting", "language"]
readme = "README.md"
exclude = ["extras/"]

[workspace]
members = [
    "mps-interpreter",
    "mps-player",
    "mps-m3u8"
]

[dependencies]
# local
mps-interpreter = { version = "0.8.0", path = "./mps-interpreter" }
# external
clap = { version = "3.0", features = ["derive"] }
console = { version = "0.15" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mps-player = { version = "0.8.0", path = "./mps-player", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
# TODO fix need to specify OS-specific dependency of mps-player
mps-player = { version = "0.8.0", path = "./mps-player", features = ["mpris-player", "mpd"] }

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4

[profile.bench]
lto = false

[profile.dev.package.bliss-audio-symphonia]
debug-assertions = false
overflow-checks = false
debug = true
opt-level = 3

[profile.dev.package."*"]
debug-assertions = false
overflow-checks = false
debug = true
opt-level = 3
