[package]
name = "mps-interpreter"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only OR GPL-2.0-or-later"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rusqlite = { version = "0.26.3" }
symphonia = { version = "0.4.0", optional = true, features = [
    "aac", "flac", "mp3", "pcm", "vorbis", "isomp4", "ogg", "wav"
] }
dirs = { version = "4.0.0" }
regex = { version = "1" }
shellexpand = { version = "2.1", optional = true }

[features]
default = [ "music_library", "ergonomics" ]
music_library = [ "symphonia" ] # song metadata parsing and database auto-population
ergonomics = ["shellexpand"]
