[package]
name = "mps-interpreter"
version = "0.8.0"
edition = "2021"
license = "LGPL-2.1-only OR GPL-3.0-only"
readme = "README.md"
rust-version = "1.59"

[dependencies]
rusqlite = { version = "0.26.3", features = ["bundled"] }
symphonia = { version = "0.5.0", optional = true, features = [
    "aac", "alac", "flac", "mp3", "pcm", "vorbis", "isomp4", "ogg", "wav"
] }
dirs = { version = "4.0.0" }
regex = { version = "1" }
rand = { version = "0.8" }
shellexpand = { version = "2.1", optional = true }
bliss-audio-symphonia = { version = "0.4", optional = true, path = "../bliss-rs" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "file_parse"
harness = false

[features]
default = [ "music_library", "ergonomics", "advanced" ]
music_library = [ "symphonia" ] # song metadata parsing and database auto-population
ergonomics = ["shellexpand"] # niceties like ~ in pathes
advanced = ["bliss-audio-symphonia"] # advanced language features like bliss playlist generation
