[package]
name = "mps-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { version = "^0.14"}
m3u8-rs = { version = "^3.0.0" }

# local
mps-interpreter = { path = "../mps-interpreter" }

[target.'cfg(unix)'.dependencies]
#dbus = { version = "^0.9" }
mpris-player = { version = "^0.6.1", path = "../mpris-player" }
