[package]
name = "mps-player"
version = "0.2.0"
edition = "2021"
license = "LGPL-2.1-only OR GPL-2.0-or-later"
readme = "README.md"

[dependencies]
rodio = { version = "^0.14"}
m3u8-rs = { version = "^3.0.0" }

# local
mps-interpreter = { path = "../mps-interpreter", version = "0.2.0" }

[target.'cfg(unix)'.dependencies]
#dbus = { version = "^0.9" }
mpris-player = { version = "^0.6.1", path = "../mpris-player" }
