[package]
name = "mps-player"
version = "0.8.0"
edition = "2021"
license = "LGPL-2.1-only OR GPL-3.0-only"
readme = "README.md"

[dependencies]
rodio = { version = "^0.15", features = ["symphonia-all"]}
m3u8-rs = { version = "^3.0" }
fluent-uri = { version = "^0.1" }
mpd = { version = "0.0.12", optional = true }

# local
mps-interpreter = { path = "../interpreter", version = "0.8.0" }

[target.'cfg(target_os = "linux")'.dependencies]
#dbus = { version = "^0.9" }
mpris-player = { version = "^0.6", path = "../mpris-player", optional = true }

[features]
default = ["os-controls", "mpd"]
os-controls = []

# I wish this worked...
#[target.'cfg(not(target_os = "linux"))'.features]
#default = ["os-controls"]
#os-controls = []

#[target.'cfg(target_os = "linux")'.features]
#default = ["os-controls"]
#os-controls = ["mpris-player"]
