[package]
name = "muss-player"
version = "0.9.0"
edition = "2021"
license = "LGPL-2.1-only OR GPL-3.0-only"
readme = "README.md"

[dependencies]
rodio = { version = "^0.16", features = ["symphonia-all"], default-features = false}
m3u8-rs = { version = "^3.0" }
mpd = { version = "0.0.12", optional = true }

# local
muss-interpreter = { path = "../interpreter", version = "0.9.0" }

[target.'cfg(target_os = "linux")'.dependencies]
#dbus = { version = "^0.9" }
# TODO replace mpris-player, maybe with mpris2-zbus https://github.com/pop-os/dbus-settings-bindings/tree/main/mpris2
mpris-player = { version = "^0.6", path = "../mpris-player", optional = true }
base64 = { version = "0.13", optional = true }

[features]
default = ["os-controls", "mpd"]
os-controls = ["base64"]

# I wish this worked...
#[target.'cfg(not(target_os = "linux"))'.features]
#default = ["os-controls"]
#os-controls = []

#[target.'cfg(target_os = "linux")'.features]
#default = ["os-controls"]
#os-controls = ["mpris-player"]
